# pr-sentinel

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_positive.yml
.github/workflows/: ci.yml  evals.yml  realpr-eval.yml  release.yml  self-review.yml
assets/: demo.html
evals/: agentic_probe.py  agentic_probe2.py  realpr.py  realpr_snapshot.json  run.py  sast_probe.py
evals/fixtures/: clean_async_await.yml  clean_batched_query.yml  clean_bounded_loop.yml  clean_dependency_bump.yml  clean_docs.yml  clean_parameterized_sql.yml  clean_refactor.yml  clean_test_with_code.yml  clean_validated_input.yml  cs_path_traversal.yml  go_sql_injection.yml  go_untested_error.yml  injection_in_title.yml  java_path_traversal.yml  js_onplusone.yml  js_open_redirect.yml  js_xss.yml  leaky_abstraction.yml  mt_command_injection.yml  mt_hardcoded_secret.yml  mt_missing_auth.yml  mt_scary_title_clean.yml  mt_sql_injection.yml  mt_tls_disabled.yml  (+13 more)
tests/: conftest.py  test_agents.py  test_commands.py  test_config.py  test_diffmap.py  test_formatter.py  test_github_client.py  test_graph.py  test_main.py  test_merge.py  test_realpr.py  test_repo_context.py  test_research_levers.py  test_sast.py  test_security.py  test_signals.py  test_skip_and_chunking.py  test_v2_features.py  test_verification.py  test_voting.py  test_wave1.py  test_wave2.py  test_wave3.py
(+37 files in other folders)
