[project]
name = "pr-sentinel"
version = "2.6.0"
description = "Multi-agent code review for pull requests - runs in your CI, bring your own key, shows which agent found what."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Moaz Muhammad", email = "moazmo27@gmail.com" }]
keywords = ["code-review", "github-actions", "llm", "multi-agent", "langgraph", "ai", "pull-request"]
dependencies = [
    "langgraph>=0.2.60,<0.4",
    "httpx>=0.28.1,<1",
    "pydantic>=2.7,<3",
    "PyYAML>=6.0.3,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[project.urls]
Homepage = "https://github.com/moazmo/pr-sentinel"
Repository = "https://github.com/moazmo/pr-sentinel"
Issues = "https://github.com/moazmo/pr-sentinel/issues"
Changelog = "https://github.com/moazmo/pr-sentinel/blob/main/CHANGELOG.md"

[project.scripts]
pr-sentinel = "pr_sentinel.main:cli"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pr_sentinel = ["prompts/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
